--- a/www/flymine/site/about.html
+++ b/www/flymine/site/about.html
@@ -20,62 +20,49 @@
 
 <p style="">Current members:</p>
 <table class="team_members">
-          <tr>
-            <td>Gos Micklem</td>
-            <td>Project Leader</td>
-            <td><a href="mailto:gos [at] flymine.org">gos [at] flymine.org</a></td>
+  <tr>
+    <td>Gos Micklem</td>
+    <td>Project Leader</td>
+    <td><a href="mailto:gos [at] flymine.org">gos [at] flymine.org</a></td>
+  </tr>
+  <tr>
+    <td>Richard Smith</td>
+    <td>Software Team Leader</td>
+    <td><a href="mailto:richard [at] flymine.org">richard [at] flymine.org</a></td>
+  </tr>
+  <tr>
+    <td>Matthew Wakeling</td>
+    <td>Software Developer</td>
+    <td><a href="mailto:matthew [at] flymine.org">matthew [at] flymine.org</a></td>
           </tr>
-
-          <tr>
-            <td>Richard Smith</td>
-            <td>Software Team Leader</td>
-            <td><a href="mailto:richard [at] flymine.org">richard [at] flymine.org</a></td>
+  <tr>
+    <td>Xavier Watkins</td>
+    <td>Software Developer</td>
+    <td><a href="mailto:xavier [at] flymine.org">xavier [at] flymine.org</a></td>
           </tr>
-
-          <tr>
-            <td>Matthew Wakeling</td>
-            <td>Software Developer</td>
-            <td><a href="mailto:matthew [at] flymine.org">matthew [at] flymine.org</a></td>
+  <tr>
+    <td>Julie Sullivan</td>
+    <td>Software Developer</td>
+    <td><a href="mailto:julie [at] flymine.org">julie [at] flymine.org</a></td>
           </tr>
-
-          <tr>
-            <td>Xavier Watkins</td>
-            <td>Software Developer</td>
-            <td><a href="mailto:xavier [at] flymine.org">xavier [at] flymine.org</a></td>
+  <tr>
+    <td>Dan Tomlinson</td>
+    <td>Systems Administrator</td>
+    <td><a href="mailto:dan [at] flymine.org">dan [at] flymine.org</a></td>
           </tr>
-
-          <tr>
-            <td>Julie Sullivan</td>
-            <td>Software Developer</td>
-            <td><a href="mailto:julie [at] flymine.org">julie [at] flymine.org</a></td>
-          </tr>
-
-          <tr>
-            <td>Jakub Kulaviak</td>
-            <td>Software Developer</td>
-            <td><a href="mailto:jakub [at] flymine.org">jakub [at] flymine.org</a></td>
-          </tr>
-
-          <tr>
-            <td>Dan Tomlinson</td>
-            <td>Systems Administrator</td>
-            <td><a href="mailto:dan [at] flymine.org">dan [at] flymine.org</a></td>
-          </tr>
-
-          <tr>
-            <td>Rachel Lyne</td>
-            <td>Senior Biologist</td>
-            <td><a href="mailto:rachel [at] flymine.org">rachel [at] flymine.org</a></td>
-          </tr>
-
-          <tr>
-            <td>Adrian Carr</td>
-            <td>Senior Biologist</td>
-            <td><a href="mailto:adrian [at] flymine.org">adrian [at] flymine.org</a></td>
-          </tr>
-    </table>
+  <tr>
+    <td>Rachel Lyne</td>
+    <td>Senior Biologist</td>
+    <td><a href="mailto:rachel [at] flymine.org">rachel [at] flymine.org</a></td>
+  </tr>
+  <tr>
+    <td>Adrian Carr</td>
+    <td>Senior Biologist</td>
+    <td><a href="mailto:adrian [at] flymine.org">adrian [at] flymine.org</a></td>
+  </tr>
+</table>
 <p style="">Past members:</p>
-<p>Hilde Janssens, Kim Rutherford, François Guillier, Philip North, Wenyan Ji, Peter McLaren, Tom Riley, Debashis Rana, Mark Woodbridge, Andrew Varley, Rajasekhar Paidi.</p>
+<p>Jakub Kulaviak, Hilde Janssens, Kim Rutherford, François Guillier, Philip North, Wenyan Ji, Peter McLaren, Tom Riley, Debashis Rana, Mark Woodbridge, Andrew Varley, Rajasekhar Paidi.</p>
 
 <h3>Funding</h3>
 
