--- a/www/flymine/site/release-notes.html
+++ b/www/flymine/site/release-notes.html
@@ -38,7 +38,7 @@ In Release 16.0 we have updated data from FlyBase to release FB2009_04 and many 
   <li>'outer join' - You create the same query but specify the gene to protein relationship as an 'outer join'.  This will return all 1000 genes in the first column and have empty cells in the second column for the 100 genes that don't have a protein.</li>
 </ol>
 
-<h3>Organise you lists</h3>
+<h3>Organise your lists</h3>
 <p>You can now apply aritrary tags to your saved lists both on the list analysis page and in MyMine.  Tags can be any label you like to help you categorise your saved information, one list can have multiple tags applied.  You can filter lists by tag from the Lists view page.</p>
   
 <h3>Export</h3>
