Fix format error.
Former-commit-id: 86396ce5ddb3cc04b6cd3ec32ff50ceabcf58058

--- a/www/flymine/site/release-notes.html
+++ b/www/flymine/site/release-notes.html
@@ -18,7 +18,7 @@ In Release 17.0 we have updated data from FlyBase to release FB2009_05 and many 
  <li>UPDATE - Create synonyms for FlyBase proteins discarded because they have an identical sequence to a protein already stored in the database.</li>
  <li>UPDATE - Added seven new FlyAtlas tissues.</li>
  <li>FIX - Added datasets and long names to FlyBase interactions.</li>
- <li>FIX - Added datasets to protein domains from InterPro.<li>
+ <li>FIX - Added datasets to protein domains from InterPro.</li>
  <li>FIX - Fixed bug that prevented the loading of self-self interactions from IntAct and BioGRID.</li>
 </ul>
 
