sp, as reported by kmr

--- a/www/flymine/site/release-notes.html
+++ b/www/flymine/site/release-notes.html
@@ -76,7 +76,7 @@ In Release 16.0 we have updated data from FlyBase to release FB2009_04 and many 
 </ol>
 
 <h3>Organise your lists</h3>
-<p>You can now apply aritrary tags to your saved lists both on the list analysis page and in MyMine.  Tags can be any label you like to help you categorise your saved information, one list can have multiple tags applied.  You can filter lists by tag from the Lists view page.</p>
+<p>You can now apply arbitrary tags to your saved lists both on the list analysis page and in MyMine.  Tags can be any label you like to help you categorise your saved information, one list can have multiple tags applied.  You can filter lists by tag from the Lists view page.</p>
   
 <h3>Export</h3>
 <p>Improvements to the internals of InterMine have made exporting large datasets significantly faster - you should find download speeds around an order of magnitude better.</p>
